# Thesis-Physics-Informend-Neural-Network

./: .gitignore  AGENTS.md  MODEL_WORKFLOW.md  README.md  Thesis_v3_with_extra_graphs_tables.ipynb  UPLOAD_INSTRUCTIONS.md  UPLOAD_INSTRUCTIONS_EXP007.md  main.py  pyproject.toml  requirements-colab.txt  thesis_walkthrough_section_by_section.md
configs/: colab_experiments_run_02.json  colab_experiments_run_03.json  colab_experiments_run_04.json  colab_experiments_run_05.json  exp006_controlled_simulation_scenarios.csv  exp006_data_qualification.json  exp007a_data_split.json  exp007a_multicondition_scenarios.csv  exp007b_data_split.json  exp007b_multicondition_scenarios.csv  experiment.yaml  experiment_exp007.yaml  physics_priors.yaml  publication_data_split.json
notebooks/: train_models_colab.ipynb  train_models_colab_exp007.ipynb
outputs/: run_full_12split_3seed.ps1
research/: EXP006_RUNBOOK.md  EXP007A_PROTOCOL_AMENDMENT.md  EXP007A_RUNBOOK.md  EXP007B_PROTOCOL.md  EXP007_RUNBOOK.md  LITERATURE_SEARCH_LOG.md  PUBLICATION_NOVELTY_MATRIX.md  PUBLICATION_PROTOCOL.md  RESEARCH_ROADMAP.md
scripts/: analyze_exp007.py  analyze_exp007a_lifecycle_tail.py  analyze_exp007a_results.py  analyze_exp007b_results.py  apply_run2_fixes.py  assemble_exp007b_cache.py  build_colab_notebook.py  build_exp007a_colab_notebook.py  build_exp007b_colab_notebook.py  build_run3_colab_notebook.py  build_run4_colab_notebook.py  build_run5_colab_notebook.py  build_upload_package.py  diagnose_exp007_open.py  diagnose_exp007a_open.py  finalize_colab_notebooks.py  finalize_colab_source.py  (+32 more)
(+173 files in other folders)
