[project]
name = "thesis-work"
version = "0.1.0"
description = "Local NASA IMS bearing RUL thesis pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepxde>=1.12.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "torch>=2.2.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
thesis-work = "thesis_work.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thesis_work"]
